force-app/main/default/objects/Map_State__c/Map_State__c.object-meta.xml
<CustomObject>
    <label>Map State</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map States</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>