force-app/main/default/objects/Map_State__c/fields/Clientele_State_ID__c.field-meta.xml
<CustomField>
    <fullName>Clientele_State_ID__c</fullName>
    <externalId>true</externalId>
    <label>Clientele_State_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>