force-app/main/default/objects/Map_State__c/fields/FIPS__c.field-meta.xml
<CustomField>
    <fullName>FIPS__c</fullName>
    <label>FIPS</label>
    <length>3</length>
    <type>Text</type>
</CustomField>