force-app/main/default/objects/Map_State__c/fields/Nation__c.field-meta.xml
<CustomField>
    <fullName>Nation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nation</label>
    <referenceTo>Map_Nation__c</referenceTo>
    <relationshipLabel>Map States</relationshipLabel>
    <relationshipName>States</relationshipName>
    <type>Lookup</type>
</CustomField>